--- a/stylesheets/_forms.scss
+++ b/stylesheets/_forms.scss
@@ -1,12 +1,13 @@
 
 /** === Forms === */
 
+.button,
 button,
 input[type="button"],
 input[type="reset"],
 input[type="submit"] {
 	background-color: $x-color-primary-base;
-	color: $x-color-shade-white;
+	color: $x-color-primary-bg;
 	font-family: $x-font-family-heading;
 	font-size: $x-font-size-sm;
 	line-height: $x-font-leading-body;
@@ -27,6 +28,7 @@ input[type="submit"] {
 	}
 }
 
+.button:hover,
 button:hover,
 input[type="button"]:hover,
 input[type="reset"]:hover,
@@ -36,6 +38,7 @@ input[type="submit"]:hover {
 	color: $x-color-primary-base;
 }
 
+.button:active, .button:focus,
 button:active, button:focus,
 input[type="button"]:active,
 input[type="button"]:focus,
@@ -43,7 +46,7 @@ input[type="reset"]:active,
 input[type="reset"]:focus,
 input[type="submit"]:active,
 input[type="submit"]:focus {
-	border-color: $x-color-words-subtle;
+	border-color: $x-color-primary-base;
 	background-color: $x-color-shade-white;
 	color: $x-color-words-subtle;
 }
@@ -65,7 +68,7 @@ input[type="datetime-local"],
 input[type="color"],
 textarea {
 	border: 1px solid gray;
-	border-color: $x-color-border-form;
+	border-color: $x-color-border-form-focus;
 }
 
 input[type="text"]:focus,
@@ -93,5 +96,6 @@ select {
 }
 
 textarea {
+	font-size: $x-font-size-sm;
 	width: 100%;
 }
