--- a/stylesheets/_site-navigation.scss
+++ b/stylesheets/_site-navigation.scss
@@ -5,7 +5,6 @@
 
 	> div > ul {
 
-		font-family: $x-font-family-heading;
 		display: none;
 		margin: 0;
 		padding: 0;
@@ -17,6 +16,11 @@
 
 			a {
 				display: block;
+
+				&:hover {
+					color: $x-color-secondary-base;
+					text-decoration: none;
+				}
 			}
 
 			&:before {
@@ -29,21 +33,12 @@
 
 			> a {
 				color: $x-color-primary-base;
-				font-size: $x-font-size-xs;
 				@include link-transition;
 				clear: both;
 				display: block;
-				font-weight: 400;
-				letter-spacing: .125em;
-				text-decoration: none;
-				text-transform: uppercase;
 				width: 100%;
 				
 				padding: $x-space-xs; // @include block-padding( xs, xs );
-
-				&:hover {
-					color: $x-color-primary-dark;
-				}
 			}
 
 			&#more-menu {
