--- a/editor.scss
+++ b/editor.scss
@@ -1,11 +1,6 @@
 
-// Root CSS variables.
-@import "stylesheets/variables/_colors";
-@import "stylesheets/variables/_fonts";
-@import "stylesheets/variables/_grid";
-@import "stylesheets/variables/_space";
-
-// Includes.
+// !Includes.
+@import "stylesheets/variables/index";
 @import "stylesheets/inc/index";
 
 @import "stylesheets/typography.scss";
